# Brain-Tumor-Progression

./: .gitignore  main.py  pyproject.toml
dataset_download/: download_and_convert_dataset.py  mappings.py  registration_utils.py
evaluation/: metrics.py
notebooks/: vis.ipynb
src/: dataset.py  train.py
src/models/: simple_3d_cnn.py
