[project]
name = "brain-tumor-progression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib==1.4.2",
    "numpy==2.0.0",
    "pandas==2.2.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "scikit-learn==1.5.0",
    "scipy==1.13.1",
    "simpleitk==2.3.1",
    "six==1.16.0",
    "threadpoolctl==3.5.0",
    "tqdm==4.66.4",
    "tzdata==2024.1",
]
